--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -1,8 +1,3 @@
-/* @font-face {
-  font-family: "Prototype";
-  src: url("../../assets/fonts/Prototype.ttf") format("truetype");
-} */
-
 .container {
   height: calc(100vh);
   overflow: hidden;
@@ -84,12 +79,6 @@
 .socialsContainer:hover {
   border: 1px solid var(--color-border-hover);
 }
-
-/* .linksContainer a {
-  transform: scale(1.4);
-  transition: color 0.3s ease-in-out;
-  cursor: pointer;
-} */
 
 .icon {
   font-size: 40px;
@@ -176,5 +165,29 @@
 
   .stackContainer {
     width: 100vw;
+  }
+}
+
+@media (max-width: 720px) {
+  .container,
+  .wrapper {
+    height: 100vh;
+  }
+
+  .aboutContainer {
+    height: 100%;
+  }
+
+  .aboutContainer {
+    height: 100%;
+  }
+
+  .about {
+    font-size: 50px;
+  }
+
+  .stackContainer {
+    width: 100vw;
+    margin-bottom: 50px;
   }
 }
