--- a/src/components/NavLinks/navlinks.module.css
+++ b/src/components/NavLinks/navlinks.module.css
@@ -1,8 +1,8 @@
-.container ul {
-  display: flex;
+.container {
+  /* display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 2.5rem;
+  gap: 2.5rem; */
   list-style: none;
   color: var(--color-text-color);
   font-weight: bold;
@@ -10,12 +10,20 @@
   z-index: 2;
 }
 
-.container ul li {
-  font-size: 20px;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2.5rem;
+}
+
+.nav a {
+  font-size: 25px;
   cursor: pointer;
   transition: color 0.3s ease-in-out;
 }
 
-.container li:hover {
+.nav a:hover,
+.nav a.active {
   color: var(--color-primary);
 }
