--- a/src/components/Cards/cardslist.module.css
+++ b/src/components/Cards/cardslist.module.css
@@ -1,10 +1,3 @@
-/* @font-face {
-  font-family: "Prototype";
-  src: url("../../assets/fonts/Prototype.ttf") format("truetype");
-} */
-
-/* .container */
-
 .cardContainer {
   display: flex;
   justify-content: center;
@@ -111,6 +104,7 @@
     align-items: center;
     flex-direction: column;
     gap: 1rem;
+    width: 100%;
   }
 
   .frontContent {
