--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -1,6 +1,7 @@
 .container {
   overflow: hidden;
   position: relative;
+  height: calc(100vh);
 }
 
 .wrapper {
@@ -9,6 +10,7 @@
   align-items: center;
   flex-direction: column;
   width: 80%;
+  height: 90%;
   margin: auto;
   color: var(--color-text-color);
 }
@@ -17,7 +19,7 @@
   flex: 1;
   display: flex;
   gap: 40px;
-  margin-top: 120px;
+  margin-top: 200px;
   margin-left: -775px;
 }
 
