--- a/src/components/NavLinks/navlinks.module.css
+++ b/src/components/NavLinks/navlinks.module.css
@@ -1,12 +1,7 @@
 .container {
-  /* display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 2.5rem; */
   list-style: none;
   color: var(--color-text-color);
   font-weight: bold;
-  /* font-family: Prototype, sans-serif; */
   z-index: 2;
 }
 
@@ -23,7 +18,10 @@
   transition: color 0.3s ease-in-out;
 }
 
-.nav a:hover,
-.nav a.active {
+.nav a:hover {
+  color: var(--color-primary);
+}
+.active {
+  transition: color 0.2s ease-in-out;
   color: var(--color-primary);
 }
