--- a/src/components/SocialLinks/socialLinks.module.css
+++ b/src/components/SocialLinks/socialLinks.module.css
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: center;
   color: var(--color-text-color);
+  margin-bottom: 20px;
 }
 
 .closeIcon {
@@ -17,9 +18,9 @@
   cursor: pointer;
 }
 
-/* .image {
-  width: 80px;
-} */
+.image {
+  margin: 15px;
+}
 
 .list {
   margin-top: 20px;
