--- a/src/components/Waves/waves.module.css
+++ b/src/components/Waves/waves.module.css
@@ -1,16 +1,9 @@
-.flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
 .waves {
-  position: relative;
+  /* position: relative; */
   width: 100%;
-  min-height: 100px;
-  max-height: 50vh;
-  margin-top: 35px;
+  height: 100px;
+  height: 50vh;
+  /* margin-top: 35px; */
 }
 
 .parallax > use {
@@ -19,22 +12,22 @@
 
 .parallax > use:nth-child(1) {
   animation-delay: -2s;
-  animation-duration: 7s;
+  animation-duration: 20s;
 }
 
 .parallax > use:nth-child(2) {
   animation-delay: -3s;
-  animation-duration: 10s;
+  animation-duration: 30s;
 }
 
 .parallax > use:nth-child(3) {
   animation-delay: -4s;
-  animation-duration: 13s;
+  animation-duration: 33s;
 }
 
 .parallax > use:nth-child(4) {
   animation-delay: -5s;
-  animation-duration: 20s;
+  animation-duration: 30s;
 }
 
 @keyframes move-forever {
@@ -43,11 +36,5 @@
   }
   100% {
     transform: translate3d(85px, 0, 0);
-  }
-}
-
-@media (max-width: 800px) {
-  .waves {
-    height: 295px;
   }
 }
