--- a/src/components/CardList/cardslist.module.css
+++ b/src/components/CardList/cardslist.module.css
@@ -24,11 +24,11 @@
 }
 
 .image {
-  width: 100%;
-  height: 350px;
+  /* width: 100%;
+  height: 350px; */
   border-radius: 20px;
   overflow: hidden;
-  object-fit: cover;
+  /* object-fit: cover; */
   filter: brightness(50%);
   transition: filter 0.3s ease-in-out;
 }
@@ -103,7 +103,7 @@
   border: 1px solid var(--color-border-hover);
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   .card {
     display: flex;
     justify-content: center;
@@ -117,10 +117,15 @@
     width: 100vw;
   }
 
+  .image {
+    object-fit: cover;
+  }
+
   .content {
-    width: 98vw;
+    width: 100%;
     outline: none;
     transition: border 0.3s ease-in-out;
+    margin: 0;
   }
 
   .heading {
@@ -134,13 +139,14 @@
 
   .article {
     width: 90vw;
-    text-align: left;
+    text-align: center;
   }
 
   .repoButton,
   .deployButton {
     outline: none;
   }
+
   .iconContainer {
     margin-bottom: 20px;
   }
