--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -121,72 +121,45 @@
   mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
 }
 
-@media (max-width: 800px) {
-  .container {
-    height: calc(100vh);
-    /* margin: 0; */
-  }
+@media (max-width: 768px) {
+  .container,
   .wrapper {
     width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
   }
 
-  .subContainer,
-  .textContainer {
+  .aboutContainer,
+  .subContainer {
     width: 100vw;
+    margin: 0;
+    padding: 0;
   }
 
   .textContainer {
+    width: 95%;
+    margin: 0;
+    padding: 0;
     margin-top: -100px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
   }
 
   .about {
-    font-size: 50px;
-  }
-
-  .bioContainer {
-    width: 98vw;
-    margin: 0 auto;
+    font-size: 60px;
+    text-align: center;
   }
 
   .text {
+    font-size: 20px;
     text-align: center;
-    text-justify: inter-word;
-    font-size: 18px;
   }
 
+  .socialsContainer,
   .imageContainer {
     display: none;
   }
 
   .stackContainer {
-    width: 100vw;
-  }
-}
-
-@media (max-width: 720px) {
-  .container,
-  .wrapper {
-    height: 100vh;
-  }
-
-  .aboutContainer {
-    height: 100%;
-  }
-
-  .aboutContainer {
-    height: 100%;
-  }
-
-  .about {
-    font-size: 50px;
-  }
-
-  .stackContainer {
-    width: 100vw;
-    margin-bottom: 50px;
+    width: 100%;
   }
 }
