--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -60,61 +60,40 @@
   margin-bottom: 50px;
 }
 
-@media (max-width: 800px) {
-  .container {
-    height: calc(100vh);
+@media (max-width: 768px) {
+  .container,
+  .wrapper {
     width: 100vw;
+    margin: 0;
+    padding: 0;
   }
 
   .wrapper {
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
   }
 
   .textContainer {
+    width: 100%;
+    margin: auto;
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    width: 100vw;
-    margin-top: 100px;
+    margin-top: 50px;
   }
 
   .title {
     font-size: 50px;
-    text-align: center;
+  }
+
+  .subContainer,
+  .formContainer {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    padding: 0;
   }
 
   .itemsContainer {
     display: none;
-  }
-
-  .subContainer {
-    margin-top: 100px;
-    height: 500px;
-  }
-
-  .formContainer {
-    width: 98%;
-    height: 100%;
-    margin-top: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-@media (max-width: 720px) {
-  .formContainer {
-    margin-top: -100px;
-  }
-}
-
-@media (max-width: 400px) {
-  .title {
-    font-size: 45px;
-  }
-
-  .formContainer {
-    margin-top: -50px;
   }
 }
