--- a/src/components/Form/form.module.css
+++ b/src/components/Form/form.module.css
@@ -47,9 +47,15 @@
   margin-right: -150px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   .form {
     height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .input,
@@ -57,8 +63,11 @@
     width: 400px;
   }
 
+  .button {
+    width: 400px;
+  }
+
   .toaster {
-    margin-bottom: -500px;
     margin-left: -6px;
   }
 }
