about responsive styles was updated

--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -163,3 +163,17 @@
     width: 100%;
   }
 }
+
+@media (max-width: 428px) {
+  .container,
+  .wrapper {
+    width: 100vw;
+  }
+}
+
+@media (max-width: 390px) {
+  .container,
+  .wrapper {
+    width: 100vw;
+  }
+}
