--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -97,3 +97,22 @@
     display: none;
   }
 }
+
+@media (max-width: 428px) {
+  .container,
+  .wrapper {
+    width: 100vw;
+  }
+}
+
+@media (max-width: 390px) {
+  .container,
+  .wrapper {
+    width: 100vw;
+  }
+
+  .title {
+    font-size: 45px;
+    text-align: center;
+  }
+}
