projects responsive styles was updated

--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -72,3 +72,17 @@
     text-align: center;
   }
 }
+
+@media (max-width: 428px) {
+  .container,
+  .wrapper {
+    width: 100vw;
+  }
+}
+
+@media (max-width: 390px) {
+  .container,
+  .wrapper {
+    width: 100vw;
+  }
+}
